change scrollbar & fix lesson page drawer content

--- a/src/global-style.css
+++ b/src/global-style.css
@@ -22,29 +22,8 @@ input:focus {
   outline-style: solid;
 }
 
-@media only screen and (min-width: 1024px) {
-  *::-webkit-scrollbar {
-    width: 16px;
-  }
-  *::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
-  *::-webkit-scrollbar-thumb {
-    height: 56px;
-    background-color: #6a726d;
-    background-clip: content-box;
-    border: 4px solid transparent;
-    border-radius: 8px;
-  }
-  *::-webkit-scrollbar-thumb:hover {
-    background-color: #a7a5a5;
-  }
-  *::-webkit-scrollbar-track-piece {
-    display: none;
-  }
-  *::-webkit-scrollbar-track {
-    display: none;
-  }
+.simplebar-scrollbar::before {
+  background-color: #a7a5a5;
 }
 
 /* Youtube player play button style */
